--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,59 @@
+/*      Navbar      */
+
 .navbar {
-    padding: 15px 20px 15px 20px;
-    border-bottom: 1px solid red;
+    position: relative;
+    padding: 10px 15px 15px 15px;
+}
+
+.navbar::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px; /* Grosor de la línea */
+    background: linear-gradient(to right,
+            #2CD59F,
+            #1969C2);
+}
+
+
+/*      Footer      */
+
+footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  z-index: 1;
+
+}
+
+footer h5 {
+  margin-bottom: 1rem;
+}
+
+footer ul {
+  padding-left: 0;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
+footer::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #2cd59f, #1969c2);
+  z-index: -1;
 }
