--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,20 +1,18 @@
 .navbar {
-  position: relative;
-  z-index: 1; 
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .navbar::after {
   content: "";
   display: block;
   position: absolute;
-  bottom: -2px; 
+  bottom: -2px;
   left: 0;
   width: 100%;
-  height: 2px; 
-  background: linear-gradient(
-    to right,
-    #2CD59F,
-    #1969C2
-  ); 
-  z-index: -1; 
+  height: 2px;
+  background: linear-gradient(to right, #2cd59f, #1969c2);
+  z-index: -1;
 }
