Agrego detalles en Navbar

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,51 @@
   background: linear-gradient(to right, #2cd59f, #1969c2);
 }
 
+.navbar-brand-spacing {
+  padding-right: 50px;
+}
+
+.navbar-spacing {
+  gap: 16px;
+}
+
+.nav-link-custom {
+  color: #05042C;
+  font-weight: 500;
+}
+
+.nav-link-custom:hover {
+  color: #1969C2;
+    background: linear-gradient(90deg, #05042C, #2CD89E);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.nav-item.dropdown .dropdown-toggle::after {
+  color: #05042C;
+}
+
+.nav-item.dropdown .dropdown-toggle:hover::after {
+  color: #2CD89E;
+}
+
+/*      Menu Hamburguesa      */
+
+.navbar-toggler,
+.btn-close,
+.btn-close-white {
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+.navbar-toggler:focus,
+.btn-close:focus,
+.btn-close-white:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 /*      Footer      */
 
 footer {
