--- a/src/App.css
+++ b/src/App.css
@@ -120,3 +120,19 @@ footer::after {
   --bs-btn-color: var(--bs-white);
   border: 1px solid #fff;
 }
+
+/* Productos */
+
+.container-card {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+
+.card-custom {
+  border: 1px solid red;
+
+}
