--- a/src/components/Carrito/Carrito.css
+++ b/src/components/Carrito/Carrito.css
@@ -1,3 +1,183 @@
 .container_carrito {
-    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+    margin: 35px 0px 35px 0px;
+}
+
+.fila_carrito {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 30px;
+}
+
+/*      Columna 1       */
+.columna-1_carrito {
+    background-color: #fff;
+    height: 100%;
+    margin: 0px 0px 0px 70px;
+    border-radius: 15px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.carrito_header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #E8ECF4;
+
+    padding: 0px 0px 0px 25px;
+}
+.carrito_header > h1 {
+    margin: 0px;
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.header_conteo {
+    border-left: 1px solid #E8ECF4;
+    padding: 12px 40px 0px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.header_conteo > p {
+    margin: 0px;
+    padding: 0px 0px 0px 0px;
+    
+}
+.header_conteo > h2 {
+    font-size: 33px;
+    font-weight: 700;
+    padding: 0px;
+}
+
+.carrito_productos {                /* Contenedor Productos */
+    padding: 25px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 30px;
+    border-bottom: 1px solid #E8ECF4;
+}
+.carrito_productos > img {
+    width: 100%;
+    height: 180px;
+    border-radius: 13px;
+    border: 1px solid #E8ECF4;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.carrito_productos > div {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    padding-top: 10px;
+}
+.carrito_productos > div > h4 {
+    font-size: 16px;
+    font-weight: 700;
+}
+.carrito_productos> div > p {
+    font-weight: 400;
+}
+.btn-producto-comprar {
+    background-color: black;
+    padding: 5px 25px 5px 25px;
+    border-radius: 5px;
+    border: none;
+    color: #fff;
+    margin: 0px 10px 0px 0px;
+}
+
+.btn-producto-eliminar {
+    background-color: #FD4444;
+    padding: 5px 15px 5px 15px;
+    border-radius: 5px;
+    border: none;
+}
+.icon-style {
+    color:  #fff;
+    padding-bottom: 3px;
+}
+
+
+/*      Columna 2       */
+.columna-2_carrito {                /* Contenedor Global */
+    height: 160px;
+    background-color: #fff;
+    margin: 0px 70px 0px 0px;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: rgba(88, 88, 142, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.carrito_totalYprecio {             /* Contenedor Total y Precio */
+    padding: 0px 10px 0px 5px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.carrito_totalYprecio > h5 {
+    font-size: 19px;
+    font-weight: 700;
+}
+.carrito_totalYprecio > p {
+    font-size: 19px;
+    font-weight: 600;
+}
+
+.btn-carrito_comprar {               /* Button comprar */
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+
+    background: linear-gradient(to right, #2cd59f, #1969c2);
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+.btn-carrito_comprar:hover {
+    background: linear-gradient(to right, #15cb91, #0d59b1);
+    transform: scale(1.01);
+}
+
+/* Meida Queries */
+@media (max-width: 1015px) {
+
+    .fila_carrito {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    }
+
+    .columna-1_carrito {
+    margin: 0px 15px 0px 15px;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    }
+
+    .columna-2_carrito {                /* Contenedor Global */
+    margin: 0px 15px 0px 15px;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    }  
+
+    .carrito_productos > img {
+        width: 100%;
+        height: 250px;
+    }
 }
