--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@
 /*      Footer      */
 
 footer {
+  margin: 0px;
   position: absolute;
   width: 100%;
   bottom: 1;
@@ -148,7 +149,7 @@ footer::after {
   content: "";
   display: block;
   position: absolute;
-  top: -2px;
+  top: -0px;
   left: 0;
   width: 100%;
   height: 2px;
