--- a/src/pages/Inicio.css
+++ b/src/pages/Inicio.css
@@ -1,3 +1,35 @@
+.container-banner_principal {
+  width: 100%;
+  min-height: 100vh;
+  background: linear-gradient(to right, #2cd59f, #1969c2);
+  
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-p_titulo {
+  color: #fff;
+  font-size: 50px;
+  font-weight: 800;
+  text-align: center;
+}
+
+.banner-p_descripcion {
+  font-size: 18px;
+  text-align: center !important;
+  color: #fff;
+  margin: 30px 100px 0px 100px;
+}
+
+.descripcion-span {
+  font-weight: 800;
+}
+
+
 .card-img-overlay {
     position: absolute;
     top: 0;
@@ -11,9 +43,15 @@
     align-items: center;
     text-align: center;
     color: white; 
+    gap: 15px;
   }
   
   .card-img {
     filter: blur(3px); 
+  }
+
+  .card-title {
+    font-size: 30px;
+    font-weight: 700;
   }
   
