--- a/src/components/Sobre Nosotros/Sobre-nosotros.css
+++ b/src/components/Sobre Nosotros/Sobre-nosotros.css
@@ -106,6 +106,7 @@
 }
 
 
+
 /*          Sección - Nuestro Equipo        */
 
 .contenedor-sobre-nosotros {
@@ -120,6 +121,14 @@
     text-align: center;
     font-weight: 700;
     font-size: 40px;
+}
+
+.p-nuestro-equipo {
+    text-align: center;
+    font-weight: 600;
+    font-size: 25px;
+    background: -webkit-linear-gradient(#2cd59f, #1969c2); 
+    -webkit-background-clip: text; -webkit-text-fill-color: transparent;
 }
 
 .contenedor_integrantes {
@@ -151,14 +160,12 @@
     margin-bottom: 20px;
 }
 
-
 .habilidad_integrante {
     border: 2px solid black;
     border-radius: 30px;
     padding: 0px 0px 0px 0px;
     margin-bottom: 10px;
 }
-
 
 .habilidad_integrante > p {
     font-weight: 600;
@@ -203,7 +210,6 @@
     margin-left: 3px;
     color: #000000;
 }
-
 
 
 
