Cambios en sección - Ayuda

--- a/src/components/Ayuda/Ayuda.css
+++ b/src/components/Ayuda/Ayuda.css
@@ -1,50 +1,30 @@
 /* Estilos para la sección de ayuda */
-.ayuda-section {
-    background-color: #f8f9fa;
-    /* Color de fondo suave */
-    border-radius: 8px;
-    padding: 30px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    margin-top: 30px;
-    margin-bottom: 30px;
+
+/* Contenedor */
+.accordion {
+    margin: 40px;
 }
 
-.ayuda-title {
-    font-size: 2.5rem;
-    color: #007bff;
-    /* Color azul principal */
-    font-weight: bold;
+.accordion-icon {
+    margin: 0px 20px 0px 0px !important;
+    padding: 0px !important;
 }
 
+/* Titulo de Acordion */
+.h5-titulo-btn {
+    color: var(--color-subtitulos);
+    font-weight: 600;
+    margin: 10px 0px 10px 0px;
+}
+
+/* Parrafo */
+.accordion-body {
+    color: var(--color-text);
+}
+
+/* Icono color */
 .icon {
-    color: #007bff;
-    /* Color de los íconos */
+    color: var(--color-degrade-2);
     font-size: 1.5rem;
-}
-
-h3 {
-    font-size: 1.25rem;
-    color: #333;
-    /* Color de las preguntas */
-}
-
-p {
-    font-size: 1rem;
-    line-height: 1.6;
-    color: #555;
-    /* Color de los textos */
-}
-
-@media (max-width: 768px) {
-    .ayuda-title {
-        font-size: 2rem;
-    }
-
-    h3 {
-        font-size: 1.15rem;
-    }
-
-    p {
-        font-size: 0.95rem;
-    }
+    margin: 10px 5px 10px 5px;
 }
