--- a/src/components/Carrito/Carrito.css
+++ b/src/components/Carrito/Carrito.css
@@ -12,14 +12,13 @@
     gap: 20px;
 }
 
-/*      Columna 1       */
+/*      Columna 1    -    Contenedor carrito  */
 .columna-1_carrito {
     background-color: #fff;
     height: 100%;
     margin: 0px 0px 0px 70px;
     border-radius: 15px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     grid-column: 1/2;
     grid-row: 1/2;
 }
@@ -38,7 +37,6 @@
     font-weight: 700;
     font-size: 35px;
 }
-
 .header_conteo {
     border-left: 1px solid #E8ECF4;
     padding: 12px 40px 0px 40px;
@@ -58,7 +56,9 @@
     padding: 0px;
 }
 
-.carrito_productos {                /* Contenedor Productos */
+/* Contenedor - Productos */
+
+.producto_item {                
     padding: 25px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -66,7 +66,7 @@
     gap: 20px;
     border-bottom: 1px solid #E8ECF4;
 }
-.carrito_productos > img {
+.producto_item > img {
     width: 100%;
     height: 180px;
     border-radius: 13px;
@@ -79,11 +79,11 @@
     grid-row: 1/2;
     padding-top: 10px;
 }
-.carrito_productos > div > h4 {
+.item > h4 {
     font-size: 16px;
     font-weight: 700;
 }
-.carrito_productos> div > p {
+.item > p {
     font-weight: 400;
 }
 .btn-producto-comprar {
@@ -94,7 +94,6 @@
     color: #fff;
     margin: 0px 10px 0px 0px;
 }
-
 .btn-producto-eliminar {
     background-color: #FD4444;
     padding: 5px 15px 5px 15px;
@@ -114,7 +113,7 @@
     margin: 0px 70px 0px 0px;
     padding: 15px;
     border-radius: 10px;
-    box-shadow: rgba(88, 88, 142, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     
     grid-column: 2/3;
     grid-row: 1/2;
